--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,9 +16,8 @@
         <div class="alert alert-primary" role="alert">
             MyCode --- MyName
         </div>
-        <div><a href="/books">Books I have read</a></div>
-        <br/>
-        <div><a href="/create_test_books">Create test books</a></div>
+        <div><a href="/static/crud_users.html">Manage users</a></div>
+
 
     </div>
 </body>
