--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,7 @@
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            MyCode --- MyName
+            201810734 --- Alejandro Goicochea
         </div>
         <div><a href="/static/crud_users.html">Manage users</a></div>
 
