--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,6 +17,9 @@
             201810734 --- Alejandro Goicochea
         </div>
         <div><a href="/static/crud_users.html">Manage users</a></div>
+        <div><a href="/static/crud_messages.html">Manage messages</a></div>
+        <div><a href="static/login.html">Login</a></div>
+
 
 
     </div>
