--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,12 +14,10 @@
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            201810734 --- Alejandro Goicochea
+            010101010 --- Jesus Bellido
         </div>
-        <div><a href="/static/crud_users.html">Manage users</a></div>
-        <div><a href="/static/crud_messages.html">Manage messages</a></div>
-        <div><a href="static/login.html">Login</a></div>
-
+        <div><a href="/static/crud_users.html">Manage Users</a></div>
+         <div><a href="/static/login.html">Login</a></div>
 
 
     </div>
